samples/_failures_safe/1761201722_33b200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8754acb8.c: In function ‘simulate_data_read’:
./samples/SAFE/__tmp_8754acb8.c:163:9: error: expected expression at end of input
  163 |         sm->data_buffer[
      |         ^~
./samples/SAFE/__tmp_8754acb8.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8754acb8.c:163:9: error: expected declaration or statement at end of input
